--- a/config/logging.properties
+++ b/config/logging.properties
@@ -1,7 +1,9 @@
 org.glassfish.jersey.config.feature.Trace=true
 org.glassfish.grizzly.config.feature.Trace=true
-org.glassfish.jersey.handlers=java.util.logging.FileHandler
-org.glassfish.grizzly.handlers=java.util.logging.FileHandler
-java.util.logging.FileHandler.pattern=var/log/nsi-dds/jersey.log
+
+org.glassfish.jersey.handlers=java.util.logging.FileHandler, java.util.logging.ConsoleHandler
+org.glassfish.grizzly.handlers=java.util.logging.FileHandler, java.util.logging.ConsoleHandler
+
+java.util.logging.FileHandler.pattern=var/log/jersey.log
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
 
