--- a/charts/nsi-dds/templates/statefulset.yaml
+++ b/charts/nsi-dds/templates/statefulset.yaml
@@ -81,10 +81,10 @@ spec:
       volumes:
         - name: {{ .Values.config.name }}
           configMap:
-            name: {{ .Values.config.name }}
+            name: {{ include "nsi-dds.fullname" . }}-{{ .Values.config.name }}
         - name: {{ .Values.cache.name }}
           persistentVolumeClaim:
-            claimName: {{ .Values.cache.name }}
+            claimName: {{ include "nsi-dds.fullname" . }}-{{ .Values.cache.name }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
