--- a/config/logging.properties
+++ b/config/logging.properties
@@ -7,3 +7,7 @@ org.glassfish.grizzly.handlers=java.util.logging.FileHandler, java.util.logging.
 java.util.logging.FileHandler.pattern=var/log/jersey.log
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
 
+.level=ALL
+java.util.logging.ConsoleHandler.level=ALL
+java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
+confLogger.level=ALL
