--- a/pom.xml
+++ b/pom.xml
@@ -23,31 +23,31 @@
     <dependency>
       <groupId>org.glassfish.jersey.containers</groupId>
       <artifactId>jersey-container-grizzly2-servlet</artifactId>
-      <version>[3.0.1,)</version>
+      <version>3.1.3</version>
     </dependency>
 
     <dependency>
       <groupId>org.glassfish.jersey.core</groupId>
       <artifactId>jersey-server</artifactId>
-      <version>[3.0.1,)</version>
+      <version>3.1.3</version>
     </dependency>
 
     <dependency>
       <groupId>org.glassfish.jersey.media</groupId>
       <artifactId>jersey-media-moxy</artifactId>
-      <version>[3.0.1,)</version>
+      <version>3.1.3</version>
     </dependency>
 
     <dependency>
       <groupId>org.glassfish.jersey.connectors</groupId>
       <artifactId>jersey-apache-connector</artifactId>
-      <version>[3.0.1,)</version>
+      <version>3.1.3</version>
     </dependency>
 
     <dependency>
       <groupId>org.glassfish.jersey.inject</groupId>
       <artifactId>jersey-hk2</artifactId>
-      <version>[3.0.1,)</version>
+      <version>3.0.4</version>
             <exclusions>
         <exclusion>
           <groupId>org.glassfish.hk2.external</groupId>
@@ -59,7 +59,7 @@
     <dependency>
       <groupId>org.glassfish.hk2</groupId>
       <artifactId>hk2-metadata-generator</artifactId>
-      <version>[3.0.1,)</version>
+      <version>3.0.4</version>
       <exclusions>
         <exclusion>
           <groupId>org.glassfish.hk2.external</groupId>
@@ -71,7 +71,7 @@
     <dependency>
       <groupId>org.glassfish.jersey.core</groupId>
       <artifactId>jersey-common</artifactId>
-      <version>[3.0.1,)</version>
+      <version>3.1.3</version>
     </dependency>
 
     <!-- Needed for our use of JAXB API bindings. -->
@@ -113,19 +113,25 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
-      <version>5.3.18</version>
+      <version>5.3.20</version>
     </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
-      <version>5.3.6</version>
+      <version>5.3.20</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.ldap</groupId>
+      <artifactId>spring-ldap-core</artifactId>
+      <version>3.1.0</version>
     </dependency>
 
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
-      <version>4.5.13</version>
+      <version>4.5.14</version>
     </dependency>
 
     <!-- The agent messaging infrastructure for internal communications. -->
@@ -181,7 +187,7 @@
       <version>[1.4,)</version>
     </dependency>
 
-    <!-- For scheduling capabilites. -->
+    <!-- For scheduling capabilities. -->
     <dependency>
       <groupId>org.quartz-scheduler</groupId>
       <artifactId>quartz</artifactId>
@@ -547,6 +553,7 @@
           <argLine>--illegal-access=permit</argLine>
           <argLine>-Xmx1024m -Djava.net.preferIPv4Stack=true</argLine>
           <argLine>-Djersey.config.test.container.port=8801</argLine>
+          <argLine>-Djava.naming.factory.initial=com.sun.jndi.ldap.LdapCtxFactory</argLine>
           <argLine>-Dcom.sun.xml.bind.v2.runtime.JAXBContextImpl.fastBoot=true</argLine>
           <argLine>-Dlog4j.configurationFile=./src/test/resources/config/log4j.xml</argLine>
         </configuration>
@@ -572,13 +579,22 @@
           </filesets>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>3.2.0</version>
+        <configuration>
+          <propertiesEncoding>${project.build.sourceEncoding}</propertiesEncoding>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
   <distributionManagement>
     <repository>
       <id>github</id>
-      <name>GitHub BanwidthOnDemand nsi-dds Apache Maven Packages</name>
+      <name>GitHub BandwidthOnDemand nsi-dds Apache Maven Packages</name>
       <url>https://maven.pkg.github.com/BandwidthOnDemand/nsi-dds</url>
     </repository>
   </distributionManagement>
@@ -586,6 +602,13 @@
   <profiles>
     <profile>
       <id>examples-source-zip</id>
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>3.6.0</version>
+        </dependency>
+      </dependencies>
       <build>
         <plugins>
           <plugin>
