--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
       <version>2.1.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>jakarta.inject</groupId>
+      <artifactId>jakarta.inject-api</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+
     <!-- JAXB Runtime -->
     <dependency>
       <groupId>org.glassfish.jaxb</groupId>
@@ -565,7 +571,6 @@
           <argLine>--illegal-access=permit</argLine>
           <argLine>-Xmx1024m -Djava.net.preferIPv4Stack=true</argLine>
           <argLine>-Djersey.config.test.container.port=8801</argLine>
-          <argLine>-Djava.naming.factory.initial=com.sun.jndi.ldap.LdapCtxFactory</argLine>
           <argLine>-Dcom.sun.xml.bind.v2.runtime.JAXBContextImpl.fastBoot=true</argLine>
           <argLine>-Dlog4j.configurationFile=./src/test/resources/config/log4j.xml</argLine>
         </configuration>
