--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>net.es.nsi</groupId>
   <artifactId>nsi-dds</artifactId>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>1.3.0-RELEASE</version>
   <packaging>jar</packaging>
   <scm>
     <developerConnection>scm:git:https://github.com/BandwidthOnDemand/nsi-dds.git</developerConnection>
@@ -630,26 +630,5 @@
       <url>https://maven.pkg.github.com/BandwidthOnDemand/nsi-dds</url>
     </repository>
   </distributionManagement>
-
-  <profiles>
-    <profile>
-      <id>examples-source-zip</id>
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-assembly-plugin</artifactId>
-          <version>3.6.0</version>
-        </dependency>
-      </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-assembly-plugin</artifactId>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 
 </project>
