--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,6 @@
+#########################################
+# NSI-DDS test configuration.           #
+#########################################
 version: '3.8'
 services:
   opennsa-db:
@@ -29,9 +32,9 @@ services:
       - ./compose/opennsa-config/opennsa.conf:/home/opennsa/opennsa/config/opennsa.conf:ro
       - ./compose/opennsa-config/opennsa.nrm:/home/opennsa/opennsa/config/opennsa.nrm:ro
 
-  nsi-dds:
+  nsi-dds-east:
     image: nsi-dds:latest
-    container_name: nsi-dds
+    container_name: nsi-dds-east
     build:
       context: .
       dockerfile: Dockerfile
@@ -42,7 +45,23 @@ services:
     ports:
       - 8401:8401
     volumes:
-      - ./compose/nsi-dds-config:/nsi-dds/config
+      - ./compose/nsi-dds-east-config:/nsi-dds/config
+      - /tmp:/nsi-dds/var/log
+
+  nsi-dds-west:
+    image: nsi-dds:latest
+    container_name: nsi-dds-west
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        BUILDKIT_CONTEXT_KEEP_GIT_DIR: 1
+    depends_on:
+      - nsi-dds-east
+    ports:
+      - 8402:8402
+    volumes:
+      - ./compose/nsi-dds-west-config:/nsi-dds/config
       - /tmp:/nsi-dds/var/log
 
 volumes:
