--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,13 @@
       <artifactId>jersey-server</artifactId>
       <version>3.1.3</version>
     </dependency>
-
+<!--
+    <dependency>
+      <groupId>org.glassfish.jersey.media</groupId>
+      <artifactId>jersey-media-jaxb</artifactId>
+      <version>3.1.3</version>
+    </dependency>
+-->
     <dependency>
       <groupId>org.glassfish.jersey.media</groupId>
       <artifactId>jersey-media-moxy</artifactId>
@@ -112,19 +118,19 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
-      <version>5.3.20</version>
+      <version>6.0.11</version>
     </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
-      <version>5.3.20</version>
+      <version>6.0.11</version>
     </dependency>
 
     <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
-      <version>4.5.14</version>
+      <groupId>org.apache.httpcomponents.client5</groupId>
+      <artifactId>httpclient5</artifactId>
+      <version>5.2.1</version>
       <exclusions>
         <exclusion>
           <groupId>commons-logging</groupId>
@@ -457,7 +463,7 @@
             </configuration>
           </execution>
 
-          <!-- Here we build the Digitial Signature schema. -->
+          <!-- Here we build the Digital Signature schema. -->
           <execution>
             <id>signatures</id>
             <goals>
