--- a/charts/nsi-dds/values.yaml
+++ b/charts/nsi-dds/values.yaml
@@ -63,9 +63,9 @@ service:
 
 ingress:
   enabled: false
-  annotations:
-    kubernetes.io/ingress.class: nginx
-    kubernetes.io/tls-acme: "true"
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
   hosts:
     - host: front.example.domain
       paths:
